--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "author": "Tim Myerscough <tim.myerscough@mechanicalrock.io>",
   "contributors": [],
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "aws-lambda": "^0.1.2",
     "aws-sdk": "^2.94.0",
@@ -39,6 +38,7 @@
     "serverless-webpack": "^2.0.0",
     "sinon": "^2.3.8",
     "source-map-support": "^0.4.0",
+    "typescript": "^2.7.1",
     "webpack": "^3.4.0"
   }
 }
