--- a/serverless.yml
+++ b/serverless.yml
@@ -9,6 +9,11 @@ provider:
   name: aws
   runtime: nodejs6.10
   region: ap-southeast-2
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "lambda:InvokeFunction"
+      Resource: "${self:custom.notifyJobArn}"
 
 custom:
   notifyJobArn: "arn:aws:lambda:${self:provider.region}:${env:AWS_ACCOUNT}:function:${self:service}-${opt:stage}-notifyJob"
@@ -16,32 +21,8 @@ custom:
 functions:
   triggerJob:
     handler: src/trigger-job.handler
-    role: functionPermission
     environment:
       NOTIFY_JOB: ${self:custom.notifyJobArn}
   notifyJob:
     handler: src/notify-job.handler
 
-resources:
-  Resources:
-    functionPermission:
-      Type: AWS::IAM::Role
-      Properties:
-        RoleName: functionPermission
-        AssumeRolePolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service:
-                  - lambda.amazonaws.com
-              Action: sts:AssumeRole
-        Policies:
-          - PolicyName: functionPermission
-            PolicyDocument:
-              Version: '2012-10-17'
-              Statement:
-                - Effect: "Allow"
-                  Action:
-                    - "lambda:InvokeFunction"
-                  Resource: "${self:custom.notifyJobArn}"
