--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -27,6 +27,15 @@ pipelines:
           script: # Modify the commands below to build your repository.
             - yarn install
             - yarn run deploy:prod
+      - custom:
+          name: Deploy to prod2
+          caches:
+            - node
+            - yarncustom
+          script: # Modify the commands below to build your repository.
+            - yarn install
+            - yarn run deploy:prod
+          
 definitions:
   caches:
     yarncustom: /usr/local/share/.cache/yarn/v1
