--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "jasmine": "^2.6.0",
     "jasmine-spec-reporter": "^4.1.1",
     "nodemon": "^1.11.0",
-    "request": "https://registry.npmjs.org/request/-/request-2.79.0.tgz",
-    "request-promise": "^4.1.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "serverless": "^1.18.1",
     "serverless-webpack": "^2.0.0",
     "sinon": "^2.3.8",
