--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -28,7 +28,7 @@ pipelines:
             - yarn install
             - yarn run deploy:prod
   custom:
-    - deployment-to-prod:
+    deployment-to-prod:
       name: Deploy to prod2
       caches:
         - node
