--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -29,11 +29,7 @@ pipelines:
             - yarn run deploy:prod
   custom:
     deployment-to-prod:
-      name: Deploy to prod2
-      caches:
-        - node
-        - yarncustom
-      script: # Modify the commands below to build your repository.
+      - step:
         - yarn install
         - yarn run deploy:prod
           
