--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -28,6 +28,10 @@ pipelines:
             - yarn install
             - yarn run deploy:prod
   custom:
+    show-env:
+    - step:
+        script:
+        - env | grep -v AWS
     deployment-to-prod:
     - step:
         caches:
