--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,8 +5,8 @@ pipelines:
       - step:
           name: Deploy to test
           deployment: test
-          # caches:
-          #   - node
+          caches:
+            - node
           #   - yarncustom
           script: 
             - yarn install
@@ -19,8 +19,8 @@ pipelines:
         - env | grep -v AWS
     deployment-to-prod:
     - step:
-        # caches:
-        #   - node
+        caches:
+          - node
         #   - yarncustom
         script: 
           - yarn install
